--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 			let detectMovement = true;
 			let startDetectMovement = false;
 			let tagID;
-			var partMoving = "";
-			var directionMoving = "";
+			let partMoving = "";
+			let directionMoving = "";
 
 			function setup() {
 				var avatarBTCanvas = createCanvas(windowWidth, windowHeight * 0.6);
