--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
 				let rightForearmMovingUp = null;
 				let waistMoving = null;
 				let bodyMoving = null;
-				let partMoving = "";
-				let directionMoving = "";
+				var partMoving = "";
+				var directionMoving = "";
 				if (!detectMovement) {
 					return;
 				}
