--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			//Script for pairing with Avatar BT
 			let characteristic;
 			let isConnected = false; // Track connection state
-			let device; // Declare device variable
+			let device; // Declare device variable.
 			var message;
-			var partMoving = "";
-			var directionMoving = "";
+			let partMoving = "";
+			let directionMoving = "";
 
 			async function connectToDevice() {
 				try {
