--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 					partMoving = "head";
 					if (headMovingUp) {
 						directionMoving = "moving up";
-						displayText("head is moving up");
+						displayText("${partMoving} is ${directionMoving}");
 					} else {
 						directionMoving = "moving down";
 						displayText("${partMoving} is ${directionMoving}");
