--- a/index.html
+++ b/index.html
@@ -447,26 +447,27 @@
 				}
 
 				// Displaying movement text based on detected left forearm movement
-				if (leftForearmMovingUp != null && leftForearmMovingUp && !rightForearmMovingUp) {
+				if (leftForearmMovingUp != null && leftForearmMovingUp && !rightForearmMovingUp && leftShoulderMovingUp == null) {
 					partMoving = "left forearm";
 					directionMoving = "moving up";
 					displayText("${partMoving} is ${directionMoving}");
-				} else if (!leftForearmMovingUp && leftForearmMovingUp != null && !rightForearmMovingUp) {
+				} else if (!leftForearmMovingUp && leftForearmMovingUp != null && !rightForearmMovingUp && leftShoulderMovingUp == null) {
 					partMoving = "left forearm";
 					directionMoving = "moving down";
 					displayText("${partMoving} is ${directionMoving}");
 				}
 
 				// Displaying movement text based on detected right forearm movement
-				if (rightForearmMovingUp != null && rightForearmMovingUp && !leftForearmMovingUp) {
+				if (rightForearmMovingUp != null && rightForearmMovingUp && !leftForearmMovingUp && rightShoulderMovingUp == null) {
 					partMoving = "right forearm";
 					directionMoving = "moving up";
 					displayText("${partMoving} is ${directionMoving}");
-				} else if (!rightForearmMovingUp && rightForearmMovingUp != null && !leftForearmMovingUp) {
+				} else if (!rightForearmMovingUp && rightForearmMovingUp != null && !leftForearmMovingUp && rightShoulderMovingUp == null) {
 					partMoving = "right forearm";
 					directionMoving = "moving down";
 					displayText("${partMoving} is ${directionMoving}");
 				}
+
 
 				// Displaying movement based on detected waist movement
 				if (waistMoving != null && rightLegMovingUp != null && leftLegMovingUp != null) {
