--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
 					} else if (labels[i] == "LEFT FOREARM") {
 						// Movement detection for left forearm (up and down movement)
 						if (potValues[i] < previousPotValues[i] - movementThreshold) {
-							leftForearmMovingUp = true; // Left forearm is moving up
+							leftForearmMovingUp = false; // Left forearm is moving up
 						} else if (potValues[i] > previousPotValues[i] + movementThreshold) {
-							leftForearmMovingUp = false; // Left forearm is moving down
+							leftForearmMovingUp = true; // Left forearm is moving down
 						}
 					} else if (labels[i] == "RIGHT FOREARM") {
 						// Movement detection for right forearm (up and down movement)
