--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
 					return;
 				}
 				speaking = true;
-				// Create a new instance of SpeechSynthesisUtterance
+				// Create a new instance of SpeechSynthesisUtterance.
 				const utterance = new SpeechSynthesisUtterance(fullMessage);
 				// Filter available voices to find Karen's voice in Australian English
 				const karenVoice = speechSynthesis.getVoices().find(voice => voice.name === 'Karen' && voice.lang === 'en-AU');
