--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<h1>Avatar BT Debug</h1>
 		<div id="avatarBTdiv">
-			<!-- Connect Button -->
+			<!-- Connect Button. -->
 			<button id="connectButton" class="button">Connect to Avatar</button>
 			<!-- Find Closest Shop Button -->
 			<button id="findClosestShopButton" class="button" onclick="findClosestShop()">Find Closest Shop</button>
