--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<!-- Movement>-->
 		<div id="gestureDiv"></div>
 		<script>
-			//Script for pairing with Avatar BT
+			//Script for pairing with Avatar_BT
 			let characteristic;
 			let isConnected = false; // Track connection state
 			let device; // Declare device variable.
