--- a/index.html
+++ b/index.html
@@ -652,6 +652,19 @@
 			// Function to compose the message
 			const sentencesFile = 'sentences.json';
 
+			async function fetchJSONFile(filename) {
+				try {
+					const response = await fetch(filename);
+					if (!response.ok) {
+						throw new Error('Network response was not ok');
+					}
+					return await response.json();
+				} catch (err) {
+					console.error('Error fetching JSON file:', err);
+					return null;
+				}
+			}
+
 			async function composeMessage(sentencesFile, weatherDescription, timeOfDay, name, partMoving, directionMoving) {
 				try {
 					// Read sentences from JSON file
