--- a/index.html
+++ b/index.html
@@ -586,6 +586,8 @@
 			var previousMessage = ""; // Variable to store the previous message
 			var previousLatitude;
 			var previousLongitude;
+			var previousPartMoving;
+			var previousDirectionMoving;
 			var timeOfDay = getTimeOfDay();
 
 			function displayText(message) {
