--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 
 				// Check if partMoving or directionMoving has changed
 				if (partMoving !== previousPartMoving || directionMoving !== previousDirectionMoving) {
-					// Update previous partMoving and directionMoving
+					// Update previous partMoving and directionMoving.
 					previousPartMoving = partMoving;
 					previousDirectionMoving = directionMoving;
 
