--- a/index.html
+++ b/index.html
@@ -803,7 +803,19 @@
 			// Function to determine if it's day or night
 			function getTimeOfDay() {
 				var currentTime = new Date().getHours();
-				return currentTime > 6 && currentTime < 18 ? "-kind of day" : "-kind of night"; // Assuming day is from 6 AM to 6 PM
+				if (currentTime >= 6 && currentTime < 9) {
+					return "early morning";
+				} else if (currentTime >= 9 && currentTime < 12) {
+					return "morning";
+				} else if (currentTime >= 12 && currentTime < 15) {
+					return "noon";
+				} else if (currentTime >= 15 && currentTime < 18) {
+					return "afternoon";
+				} else if (currentTime >= 18 && currentTime < 21) {
+					return "evening";
+				} else {
+					return "night";
+				}
 			}
 
 			function readTag() {
